--- a/NBA-Vision/src/app/schedule/schedule-element/schedule-element.component.css
+++ b/NBA-Vision/src/app/schedule/schedule-element/schedule-element.component.css
@@ -17,3 +17,6 @@
 .container:focus label{
   color: black;
 }
+label {
+  font-weight: bold;
+}
