--- a/NBA-Vision/src/app/standings/standings.component.css
+++ b/NBA-Vision/src/app/standings/standings.component.css
@@ -18,11 +18,21 @@
 
 .btn:hover {
   background-color: var(--highlight-colour);
+}
+
+.btn:hover label {
+  color: black;
+}
+
+.btn:hover i {
   color: black;
 }
 
 .btn:focus {
   background-color: var(--highlight-colour);
+}
+
+.btn:focus label{
   color: black;
 }
 
@@ -40,9 +50,14 @@
 
 :focus {
   background-color: var(--highlight-colour);
-  color: black;
 }
 
+:focus i {
+  color: black;
+}
+:focus td {
+  color: black;
+}
 .btn-row {
   border-radius: 0;
   width: 100%;
